# rs_illume

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: lib.rs
src/accelerators/: bvh.rs  kdtreeaccel.rs  mod.rs
src/cameras/: environment.rs  mod.rs  orthographic.rs  perspective.rs  realistic.rs
src/core/: animated_transform.rs  bssrdf.rs  camera.rs  efloat.rs  fileutil.rs  film.rs  filter.rs  floatfile.rs  imageio.rs  integrator.rs  interaction.rs  interpolation.rs  interval.rs  light.rs  lightdistrib.rs  low_discrepancy.rs  material.rs  matrix.rs  medium.rs  memory.rs  mipmap.rs  mod.rs  options.rs  parallel.rs  paramset.rs  pbrt.rs  primitive.rs  profiler.rs  progress_reporter.rs  quaternion.rs  rng.rs  sampler.rs  sampling.rs  scene.rs  shape.rs  sobolmatrices.rs  spectrum.rs  stats_accumulator.rs  surface_interaction.rs  texture.rs  (+2 more)
src/core/geometry/: bounds2.rs  bounds3.rs  intergrals.rs  macros.rs  mod.rs  normal3.rs  point2.rs  point3.rs  ray.rs  vector2.rs  vector3.rs
src/core/microfacet/: beckmann_distribution.rs  disney_distribution.rs  mod.rs  trowbridge_reitz_distribution.rs
src/core/parser/: ast.rs  file_span.rs  mod.rs  visitor.rs
src/core/primitive/: geometric_primitive.rs  mod.rs  transformed_primitive.rs
src/core/reflection/: fourier_bsdf.rs  fresnel.rs  fresnel_blend.rs  fresnel_specular.rs  (+9 more)
src/filters/: box_filter.rs  gaussian.rs  mitchell.rs  mod.rs  sinc.rs  triangle.rs
src/integrators/: ao.rs  mod.rs
src/shapes/: cone.rs  curve.rs  cylinder.rs  disk.rs  hyperboloid.rs  loop_subdiv.rs  mod.rs  paraboloid.rs  sphere.rs  triangle.rs
(+9 files in other folders)
